Fix layout issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 50px;
   text-align: center;
+  margin-top: 25px;
 }
 
 #sidebar-left {
@@ -65,6 +66,10 @@ button.btn:active {
   background: #0f7495;
 }
 
+button:focus {
+  outline: none;
+}
+
 .prop-label {
   cursor: pointer;
 }
@@ -104,4 +109,8 @@ button.btn:active {
 
 .d-none {
   display: none;
+}
+
+#output-container:hover #copy-btn {
+  display: block;
 }
